.service fix et doc

--- a/apodwallpaper.service
+++ b/apodwallpaper.service
@@ -1,10 +1,12 @@
 # https://doc.ubuntu-fr.org/creer_un_service_avec_systemd
+# voir fichier service.readme.md
 
 [Unit]
 Description=apodwallpaper - Script to set the APOD image as wallpaper
 Documentation=https://github.com/baual/apod-wallpaper
-# on a besoin que interface graphique X soit lancée
-PartOf=graphical-session.target
+After=network-online.target
+Wants=network-online.target
+Requires=graphical-session.target
 After=graphical-session.target
 
 [Service]
